Added validation to venues (including comon error handler); added RI for editing venue once opened

--- a/site/templates/clients/manageclients.html
+++ b/site/templates/clients/manageclients.html
@@ -13,6 +13,7 @@
         <thead>
           <td>Reference</td>
           <td>Details</td>
+          <td colspan="2">&nbsp;</td>
         </thead>
         {% for client in clients %}
         <tr>
