--- a/site/templates/bookings/bookingerror.html
+++ b/site/templates/bookings/bookingerror.html
@@ -3,11 +3,11 @@
 
 
 {% block pagecontent %}
-    <h1>Booking Error</h1>
+    <h1>Booking Result</h1>
 
     <form name="bookingerror" method="post" 
           action="/bookings/bookingerror">
-          <p><strong>Error: {{ error }}</strong></p>
+          <p><strong>{{ error }}</strong></p>
           <input type="hidden" name="city" value="{{ city }}" />
           <input type="hidden" name="type" value="{{ type }}" />
           <input type="hidden" name="start" value="{{ start }}" />
