--- a/site/templates/bookings/bookingerror.html
+++ b/site/templates/bookings/bookingerror.html
@@ -12,8 +12,12 @@
           <input type="hidden" name="type" value="{{ type }}" />
           <input type="hidden" name="start" value="{{ start }}" />
           <input type="hidden" name="nights" value="{{ nights }}" />
-          <input type="hidden" name="genderSensitive" 
-          {% if genderSensitive %} value="on" {% endif %} />
+          {% if wheelchairAccess %} 
+            <input type="hidden" name="wheelchairAccess" value="on" />
+          {% endif %} 
+          {% if genderSensitive %} 
+            <input type="hidden" name="genderSensitive" value="on" />
+          {% endif %} 
           <input type="hidden" name="adultMales" value="{{ adultMales }}" />
           <input type="hidden" name="adultFemales" value="{{ adultFemales }}" />
           <input type="hidden" name="childMales" value="{{ childMales }}" />
