--- a/trunk/site/templates/services/capturebedroom.html
+++ b/trunk/site/templates/services/capturebedroom.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block pagecontent %}
-    <h1>Capture an Bedroom</h1>
+    <h1>Capture a Bedroom</h1>
     <form name="bedroom" method="post" action="/services/owner/venue/capturebedroom">
         <input type="hidden" name="containerkey" value="{{ containerkey }}" />
         <input type="hidden" name="came_from" value="{{ came_from }}" />
