--- a/trunk/site/templates/bookings/editenquiry.html
+++ b/trunk/site/templates/bookings/editenquiry.html
@@ -7,7 +7,9 @@
 {% block pagecontent %}
     <h1>Edit Existing Enquiry</h1>
     <form name="enquiry" method="post" 
-          action="/bookings/editenquiry">
+          action="/bookings/enquiry/editenquiry">
+      <input type="hidden" name="came_from" 
+             value="{{ came_from }}" />
       <input type="hidden" name="enquirykey" 
              value="{{ enquirykey }}" />
         <table>
