--- a/trunk/site/templates/bookings/viewenquiry.html
+++ b/trunk/site/templates/bookings/viewenquiry.html
@@ -10,7 +10,7 @@
 <h1>Enquiry</h1>
 
 <p>Enquiry Number: {{ enquiry.referenceNumber }} </p>
-<p>Enquiry Status: {{ enquiry.workflow_state }} </p>
+<p>Enquiry Status: {{ enquiry.workflowState }} </p>
 <p>Enquiry Expiry Date: {{ enquiry.expiryDate }} </p>
 
 <form name="advanceEnquiry" method="post" 
