--- a/site/templates/admin/adminhome.html
+++ b/site/templates/admin/adminhome.html
@@ -6,6 +6,7 @@
     <p>Select an administration function you would like to perform</p>
     <p><a href="/admin/schedule">View and Maintain the Match Schedule</a></p>
     <p><a href="/admin/lookups">View and Maintain System Codes</a></p>
+    <p><a href="/admin/packages">View and Maintain Accommodation Packages</a></p>
     <p><a href="/admin/statistics">Statistics</a></p>
 
 {% endblock pagecontent %}
